<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:elevation="8dp">

    <TextView
        android:id="@+id/tvPopUpDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calender_popup_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/tvPopUpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calender_popup_dateAndTime"
        android:textSize="16sp"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/tvPopUpMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_popup_moreinfo"
        android:textSize="16sp"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/btnPopUpJoinEvent"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_popup_accept"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnPopUpCancel"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_popup_not_interested"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"/>

</LinearLayout>
